Clone
pip install python-dotenv djangorestframework djangorestframework-simplejwt twilio bs4 hashid botocore python-decouple boto3 django-cors-headers django-phonenumber-field[phonenumbers] psycopg2 django-filter django-timezone-field hashids Pillow
Install Postgres
https://dev.to/mungaigikure/how-to-set-up-postgres-in-your-django-project-575i
Run Migrations
Python manage.py migrate
Run the server
Python manage.py runserver

Starting a cloned react app
Open your terminal and then type

$ git clone {the url to the GitHub repo}

This clones the repo

cd into the new folder and type

$ npm install

This installs the required dependencies

To run the React project.
$ npm start



https://github.com/sibtc/piggybank

Inspect elements to see classes for bootstrap

https://www.valentinog.com/blog/drf/

Goal
Code snippets are always associated with a creator.


Only authenticated users may create snippets.
Only the creator of a snippet may update or delete it.
Unauthenticated requests should have full read-only access.

Restarting the database (Windows)
del -f db.sqlite3
Delete the migrations folder

python manage.py makemigrations snippets
python manage.py migrate

Restarting the database (Mac)
rm -f db.sqlite3
rm -r snippets/migrations
python manage.py makemigrations snippets
python manage.py migrate


(venv) C:\Users\keanu\django\filter\fil>python manage.py shell
Python 3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from filter.models import Book
>>> from filter.models import Author
>>> Author.objects.all()
<QuerySet [<Author: Author object (1)>, <Author: Author object (2)>, <Author: Author object (3)>]>
>>> Author.objects.all()[0]
<Author: Author object (1)>
>>> Author.objects.all()[0].name
'om'
>>> for a in Author.objects.all():
... print(a.name)
  File "<console>", line 2
    print(a.name)
    ^^^^^
IndentationError: expected an indented block after 'for' statement on line 1
>>> for a in Author.objects.all():
...   print(a.name)
...
om
brad
tom
>>>

Query a foreign key on the database
(venv) C:\Users\keanu\django\TelePsycRX_Staging_Backend>python manage.py shell
Python 3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from account.models import Appointment
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ModuleNotFoundError: No module named 'account'
>>> from accounts.models import Appointment
>>> queryset = Appointment.objects.all()
>>> queryset[0].patient
<Patient: eda bar>
>>> queryset[0].patient.email
'eda@gmail.com'
>>>

